# anda

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md  README_CN.md  README_JA.md  example.env
.github/workflows/: build-anda-bot.yml  publish-crates.yml  release.yml  test.yml
agents/anda_assistant/: Cargo.toml  SystemInstructions.md
agents/anda_assistant/src/: agent.rs  lib.rs
agents/anda_bot/: Cargo.toml  Character.toml  Config.toml  README.md  deployment_cn.md  deployment_en.md
agents/anda_bot/nitro_enclave/: Character.toml  Config.toml  amd64.Dockerfile  setup.sh  supervisord.conf
agents/anda_bot/src/: config.rs  handler.rs  ic_sig_verifier.rs  main.rs  twitter.rs
agents/anda_nexus/: Cargo.toml  Config.toml
agents/anda_nexus/src/: config.rs  lib.rs  nexus.rs  types.rs
anda_cli/: Cargo.toml  README.md
anda_cli/src/: main.rs
anda_core/: Cargo.toml  README.md
anda_core/src/: agent.rs  context.rs  http.rs  json.rs  lib.rs  model.rs  tool.rs
anda_core/src/model/: completion.rs  embedding.rs  knowledge.rs  mod.rs  resource.rs  thread.rs  xid.rs
anda_engine/: Cargo.toml  README.md
anda_engine/src/: engine.rs  extension.rs  lib.rs  management.rs  memory.rs  model.rs  store.rs
anda_engine/src/context/: agent.rs  base.rs  cache.rs  engine.rs  keys.rs  mod.rs  tee.rs  web3.rs
anda_engine/src/database/: mod.rs
anda_engine/src/extension/: attention.rs  character.rs  extractor.rs  fetch.rs  google.rs  mod.rs  segmenter.rs
anda_engine/src/management/: db.rs  mod.rs  state.rs  thread.rs  user.rs
anda_engine/src/model/: cohere.rs  deepseek.rs  gemini.rs  kimi.rs  mod.rs  openai.rs  xai.rs
anda_engine/src/model/gemini/: types.rs
anda_engine/src/model/openai/: types.rs
anda_engine/src/plugin/: attention.rs  character.rs  extractor.rs  mod.rs  segmenter.rs
anda_engine_cli/: Cargo.toml  README.md
anda_engine_cli/src/: main.rs
anda_engine_server/: Cargo.toml  README.md
anda_engine_server/src/: handler.rs  ic_sig_verifier.rs  lib.rs  types.rs
anda_kdb/: Cargo.toml  README.md
anda_kdb/src/: db.rs  knowledge.rs  lib.rs
anda_lancedb/: Cargo.toml  README.md
anda_lancedb/src/: knowledge.rs  lancedb.rs  lib.rs
anda_web3_client/: Cargo.toml  README.md
anda_web3_client/src/: client.rs  crypto.rs  lib.rs
characters/: AndaICP.toml
docs/: architecture.md  architecture_cn.md
examples/bsc_ledger_agent/src/: agent.rs
examples/icp_ledger_agent/: Cargo.toml  README.md
examples/icp_ledger_agent/src/: agent.rs  main.rs
tools/anda_bnb/: Cargo.toml  README.md
tools/anda_bnb/artifacts/: ERC20Example.json
tools/anda_bnb/examples/: balance_test.rs  common.rs  transfer_test.rs
tools/anda_bnb/src/: helper.rs  ledger.rs  lib.rs
tools/anda_bnb/src/ledger/: balance.rs  mod.rs  transfer.rs
tools/anda_bnb/src/signer/: anda_signer.rs  mod.rs
tools/anda_bnb/src/utils_evm/: mod.rs
tools/anda_bnb_examples/: Cargo.toml
tools/anda_bnb_examples/src/: balance_test.rs  main.rs  transfer_test.rs
tools/anda_bsc/: Cargo.toml
tools/anda_bsc/src/: lib.rs
tools/anda_bsc/src/ledger/: balance.rs  mod.rs  transfer.rs
tools/anda_bsc/src/signer/: anda_signer.rs  mod.rs
tools/anda_bsc/src/utils_evm/: mod.rs
tools/anda_icp/: Cargo.toml  README.md
tools/anda_icp/src/: ledger.rs
tools/anda_icp/src/ledger/: balance.rs  mod.rs  transfer.rs
