[workspace]
resolver = "2"
members = [
  "anda_cli",
  "anda_core",
  "anda_engine",
  "anda_engine_server",
  "anda_kdb",
  "anda_web3_client",
  "agents/*",
  "examples/*",
  "tools/*",
]

[workspace.package]
description = "Anda is an AI agent framework built with Rust, powered by ICP and TEEs."
repository = "https://github.com/ldclabs/anda"
homepage = "https://github.com/ldclabs/anda"
keywords = ["ai-agent", "icp", "tee"]
categories = [
  "accessibility",
  "web-programming",
  "development-tools",
  "text-processing",
]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
axum = { version = "0.8", features = [
  "http1",
  "http2",
  "json",
  # "macros",
  "matched-path",
  "tokio",
  "query",
], default-features = true }
async-trait = "0.1"
bytes = "1"
base64 = "0.22"
candid = "0.10"
ciborium = "0.2"
futures = "0.3"
futures-util = "0.3"
http = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
ic_cose_types = "0.7"
ic_cose = "0.7"
ic_object_store = "0.7"
ic-agent = "0.40"
ic_auth_types = "0.2"
ic_auth_verifier = "0.2"
ic_tee_agent = "0.3"
ic_tee_gateway_sdk = "0.3"
num-traits = "0.2"
object_store = { version = "0.12" }
tokio-util = "0.7"
tokio = { version = "1", features = ["full"] }
structured-logger = "1"
rand = "0.9"
reqwest = { version = "0.12", features = [
  "rustls-tls",
  "rustls-tls-native-roots",
  "json",
  "gzip",
  "stream",
  "http2",
  # "hickory-dns",
], default-features = true }
thiserror = "2"
moka = { version = "0.12", features = ["future"] }
xid = "1.1"
toml = "0.8"
ed25519-consensus = "2.1"
k256 = { version = "0.13", features = ["ecdsa"] }
log = "0.4"
dotenv = "0.15"
schemars = { version = "0.8" }
clap = { version = "4.5", features = ["derive", "env"] }
idna = "1.0" # https://github.com/ldclabs/anda/security/dependabot/1
url = "2.5"
const-hex = "1"

# [patch.crates-io]
# candid = { git = "https://github.com/ldclabs/candid.git", rev = "4cf7d02bad9530172cb4cafe733cb1e80689b793" } # remove check_recursion on stack for TEE

[workspace.metadata.cargo-shear]
ignored = ["idna", "chrono", "xid", "ic_auth_types"]

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'
