[package]
name = "anda_core"
description = "Core types and traits for Anda -- an AI agent framework built with Rust, powered by ICP and TEEs."
repository = "https://github.com/ldclabs/anda/tree/main/anda_core"
publish = true
version = "0.4.1"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candid = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
object_store = { workspace = true }
ic_cose_types = { workspace = true }
tokio-util = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
