[package]
name = "anda_engine"
description = "Agents engine for Anda -- an AI agent framework built with Rust, powered by ICP and TEEs."
repository = "https://github.com/ldclabs/anda/tree/main/anda_engine"
publish = true
version = "0.4.3"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.4" }
candid = { workspace = true }
bytes = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
object_store = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
ic_tee_gateway_sdk = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
schemars = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
moka = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
url = { workspace = true }

[dev-dependencies]
dotenv = { workspace = true }
