[package]
name = "anda_engine_cli"
description = "The command line interface for Anda engine server."
repository = "https://github.com/ldclabs/anda/tree/main/anda_engine_cli"
publish = false
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.4" }
anda_engine = { path = "../anda_engine", version = "0.4" }
anda_web3_client = { path = "../anda_web3_client", version = "0.1" }
base64 = { workspace = true }
clap = { workspace = true }
ciborium = { workspace = true }
dotenv = { workspace = true }
structured-logger = { workspace = true }
tokio = { workspace = true }
const-hex = { workspace = true }
rand = { workspace = true }
ic_cose_types = { workspace = true }
ic_tee_agent = { workspace = true }

[dev-dependencies]
