[package]
name = "anda_engine_cli"
description = "The command line interface for Anda engine server."
repository = "https://github.com/ldclabs/anda/tree/main/anda_engine_cli"
publish = false # can't publish this crate because `anda_web3_client` is not published
version = "0.1.1"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.4" }
anda_web3_client = { path = "../anda_web3_client", version = "0.2" }
base64 = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
const-hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
