[package]
name = "anda_engine_server"
description = "A http server to serve multiple Anda engines."
repository = "https://github.com/ldclabs/anda/tree/main/anda_engine_server"
publish = true
version = "0.2.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.5" }
anda_engine = { path = "../anda_engine", version = "0.5" }
axum = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
ic_cose_types = { workspace = true }
ic_tee_agent = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
ic_auth_verifier = { workspace = true, features = ["full"] }

[dev-dependencies]
