[package]
name = "anda_kdb"
description = "Anda AI Agent knowledge store based on Anda DB"
repository = "https://github.com/ldclabs/anda/tree/main/anda_kdb"
publish = false
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.6" }
anda_engine = { path = "../anda_engine", version = "0.6" }
anda_db = { workspace = true }
anda_db_tfs = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xid = { workspace = true }

[dev-dependencies]
