[package]
name = "anda_lancedb"
description = "Anda vector store based on LanceDB"
repository = "https://github.com/ldclabs/anda/tree/main/anda_lancedb"
publish = false
version = "0.1.3"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.4" }
anda_engine = { path = "../anda_engine", version = "0.4" }
futures = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
candid = { workspace = true }
ic_object_store = { workspace = true }
ic_cose_types = { workspace = true }
ic-agent = { workspace = true }
serde_json = { workspace = true }
xid = { workspace = true }
ed25519-consensus = { workspace = true }
half = "2.4"
lancedb = { git = "https://github.com/ldclabs/lancedb", rev = "ba2454c4465932ff668b09bf555a1567518fa310" }
lance-index = "=0.22.0"
lance-io = "=0.22.0"
arrow-array = "53.2"
arrow-schema = "53.2"

[dev-dependencies]
