[package]
name = "anda_lancedb"
description = "Anda vector store based on LanceDB"
repository = "https://github.com/ldclabs/anda/tree/main/anda_lancedb"
publish = false
version = "0.6.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.6" }
anda_engine = { path = "../anda_engine", version = "0.6" }
futures = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
candid = { workspace = true }
ic_object_store = { workspace = true }
ic_cose_types = { workspace = true }
ic-agent = { workspace = true }
serde_json = { workspace = true }
xid = { workspace = true }
ed25519-consensus = { workspace = true }
half = "2.4"
lancedb = { git = "https://github.com/ldclabs/lancedb", rev = "6b94ba7c37e0433c4d1dd1ca143298130e70b761" }
lance-index = { version = "=0.24.1" }
lance-io = { version = "=0.24.1" }
arrow-array = "54.1"
arrow-schema = "54.1"

[dev-dependencies]
