[package]
name = "anda_lancedb"
description = "Anda vector store based on LanceDB"
repository = "https://github.com/ldclabs/anda/tree/main/anda_lancedb"
publish = false
version = "0.6.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.6" }
anda_engine = { path = "../anda_engine", version = "0.6" }
futures = { workspace = true }
tokio = { workspace = true }
object_store = { workspace = true }
candid = { workspace = true }
ic_object_store = { workspace = true }
ic_cose_types = { workspace = true }
ic-agent = { workspace = true }
serde_json = { workspace = true }
xid = { workspace = true }
ed25519-consensus = { workspace = true }
half = "2.4"
lancedb = { git = "https://github.com/ldclabs/lancedb", rev = "7dc28e8ece3131ae7acbde6f28f5a2244e095786" }
lance-index = { version = "=0.25.0", tag = "v0.25.0-beta.2", git = "https://github.com/lancedb/lance.git" }
lance-io = { version = "=0.25.0", tag = "v0.25.0-beta.2", git = "https://github.com/lancedb/lance.git" }
arrow-array = "54.1"
arrow-schema = "54.1"

[dev-dependencies]
