[package]
name = "anda_web3_client"
description = "The Rust SDK for Web3 integration in non-TEE environments."
repository = "https://github.com/ldclabs/anda/tree/main/anda_web3_client"
publish = true
version = "0.2.1"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../anda_core", version = "0.5" }
anda_engine = { path = "../anda_engine", version = "0.5" }
futures = { workspace = true }
const-hex = { workspace = true }
http = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
ic-agent = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
ic_tee_agent = { workspace = true }
ic_auth_verifier = { workspace = true, features = ["full"] }
ic_tee_gateway_sdk = { workspace = true }
reqwest = { workspace = true }
ed25519-consensus = { workspace = true }

[dev-dependencies]
