[package]
name = "anda_assistant"
description = "Anda -- an AI Assistant powered by the Knowledge Interaction Protocol (KIP)."
repository = "https://github.com/ldclabs/anda/tree/main/agents/anda_assistant"
publish = true
version = "0.2.7"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../../anda_core", version = "0.7" }
anda_engine = { path = "../../anda_engine", version = "0.7" }
anda_cognitive_nexus = { workspace = true }
anda_db = { workspace = true }
anda_kip = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
object_store = { workspace = true }
