[package]
name = "anda_bot"
description = "I'm Anda ICP, Digital panda 🐼 by Anda framework. Secured in TEE, memories on ICP chain.✨"
repository = "https://github.com/ldclabs/anda/tree/main/agents/anda_bot"
publish = false
version = "0.4.6"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../../anda_core", version = "0.5" }
anda_engine = { path = "../../anda_engine", version = "0.5" }
anda_web3_client = { path = "../../anda_web3_client", version = "0.2" }
anda_icp = { path = "../../tools/anda_icp", version = "0.2" }
anda_lancedb = { path = "../../anda_lancedb", version = "0.2" }
axum = { workspace = true }
candid = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
ic_object_store = { workspace = true }
ic-agent = { workspace = true }
ic_tee_agent = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
ed25519-consensus = { workspace = true }
const-hex = { workspace = true }
ic_auth_verifier = { workspace = true, features = ["full"] }
config = "0.15"
agent-twitter-client = { git = "https://github.com/ldclabs/agent-twitter-client.git", rev = "717bd0d8dc4febfece0065c972801924ecae2639" }

[dev-dependencies]

[patch.crates-io]
candid = { git = "https://github.com/ldclabs/candid.git", rev = "4cf7d02bad9530172cb4cafe733cb1e80689b793" } # remove check_recursion on stack for TEE
