[package]
name = "anda_bot"
description = "I'm Anda ICP, Digital panda 🐼 by Anda framework. Secured in TEE, memories on ICP chain.✨"
repository = "https://github.com/ldclabs/anda/tree/main/agents/anda_bot"
publish = false
version = "0.7.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../../anda_core", version = "0.7" }
anda_engine = { path = "../../anda_engine", version = "0.7" }
anda_web3_client = { path = "../../anda_web3_client", version = "0.7" }
anda_icp = { path = "../../tools/anda_icp", version = "0.7" }
anda_engine_server = { path = "../../anda_engine_server", version = "0.7" }
axum = { workspace = true }
candid = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
ic_cose = { workspace = true }
ic_cose_types = { workspace = true }
ic_object_store = { workspace = true }
ic-oss-types = { workspace = true }
ic-agent = { workspace = true }
ic_tee_agent = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
ic_auth_verifier = { workspace = true, features = ["full"] }
config = "0.15"
anda_object_store = "0.1"

[dev-dependencies]

[patch.crates-io]
candid = { git = "https://github.com/ldclabs/candid.git", rev = "4cf7d02bad9530172cb4cafe733cb1e80689b793" } # remove check_recursion on stack for TEE
