[package]
name = "anda_nexus"
description = "Anda -- an AI Nexus powered by the Knowledge Interaction Protocol (KIP)."
repository = "https://github.com/ldclabs/anda/tree/main/agents/anda_nexus"
publish = true
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../../anda_core", version = "0.8" }
anda_engine = { path = "../../anda_engine", version = "0.8" }
anda_db = { workspace = true }
anda_db_schema = { workspace = true }
anda_db_tfs = { workspace = true }
candid = { workspace = true }
futures = { workspace = true }
ic_auth_types = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
url = { workspace = true }
isolang = { workspace = true }

[dev-dependencies]
