[package]
name = "anda_nexus"
description = "Anda -- an AI Nexus powered by the Knowledge Interaction Protocol (KIP)."
repository = "https://github.com/ldclabs/anda/tree/main/agents/anda_nexus"
publish = true
version = "0.1.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[[bin]]
name = "anda_nexus"
path = "src/bin/main.rs"

[dependencies]
anda_core = { path = "../../anda_core", version = "0.8" }
anda_engine = { path = "../../anda_engine", version = "0.8" }
anda_engine_server = { path = "../../anda_engine_server", version = "0.8" }
anda_web3_client = { path = "../../anda_web3_client", version = "0.8" }
anda_db = { workspace = true }
anda_db_schema = { workspace = true }
anda_db_tfs = { workspace = true }
anda_object_store = { workspace = true }
anda_kip = { workspace = true }
candid = { workspace = true }
config = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ic_auth_types = { workspace = true }
ic_auth_verifier = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
log = { workspace = true }
url = { workspace = true }
isolang = { workspace = true }
schemars = { workspace = true }
structured-logger = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
object_store = { workspace = true, features = ["aws"] }

[dev-dependencies]
