[package]
name = "icp_ledger_agent"
description = "An AI agent example to interact with ICP blockchain ledgers."
repository = "https://github.com/ldclabs/anda/tree/main/examples/icp_ledger_agent"
publish = false
version = "0.2.0"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../../anda_core", version = "0.4" }
anda_engine = { path = "../../anda_engine", version = "0.4" }
anda_icp = { path = "../../tools/anda_icp", version = "0.2" }
anda_web3_client = { path = "../../anda_web3_client", version = "0.2" }
anda_lancedb = { path = "../../anda_lancedb", version = "0.1" }
anda_engine_server = { path = "../../anda_engine_server", version = "0.1" }
candid = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
tokio-util = { workspace = true }
structured-logger = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
const-hex = { workspace = true }

[dev-dependencies]
