[package]
name = "anda_icp"
description = "Anda agent tools offers integration with the Internet Computer (ICP)."
repository = "https://github.com/ldclabs/anda/tree/main/tools/anda_icp"
publish = true
version = "0.2.5"
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
anda_core = { path = "../../anda_core", version = "0.4" }
anda_engine = { path = "../../anda_engine", version = "0.4" }
candid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
num-traits = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
schemars = { workspace = true }
icrc-ledger-types = "0.1"

[dev-dependencies]
